--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-MySQLdb==1.0.1
 Flask-RESTful==0.3.9
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
